lib/test/error/Termination.agda
-- /Users/banacorn/github/agda-mode/spec/error/Termination.agda:8,1-9,6
-- Termination checking failed for the following functions:
--   f
-- Problematic calls:
--   f (at /Users/banacorn/github/agda-mode/spec/error/Termination.agda:9,5-6)
module Termination where

f : Set
f = f
